# munge

./: .gitarchive-date  .gitattributes  .gitignore  .travis.yml  AUTHORS  BUGS  ChangeLog  DISCLAIMER.LLNS  DISCLAIMER.UC  HISTORY  JARGON  KEYS  META  Make-inc.mk  Makefile.am  Makefile.in  NEWS  PLATFORMS  QUICKSTART  README  README.AIX  README.MULTILIB  README.md  THANKS  TODO  aclocal.m4  bootstrap  configure  configure.ac  index.html  munge.pc.in  munge.spec  munge.spec.in  params.json
build-aux/: gen-date  gen-version
config/: Make-inc.mk  Make-rpm.mk  ac_check_peercred.m4  ac_debug.m4  ac_gpl_licensed.m4  ac_humor.m4  ac_ltlibobjs.m4  ac_meta.m4  config.h.in  libtool.m4  ltmain.sh  ltoptions.m4  ltsugar.m4  ltversion.m4  x_ac_aix.m4  x_ac_arch.m4  x_ac_canonical.m4  x_ac_check_cond_lib.m4  x_ac_check_fifo_recvfd.m4  x_ac_check_local_peercred.m4  x_ac_check_peercred.m4  x_ac_check_pthreads.m4  x_ac_check_so_peercred.m4  x_ac_check_ssl.m4  x_ac_darwin.m4  x_ac_debug.m4  x_ac_expand_install_dirs.m4  x_ac_getgrent.m4  x_ac_getpwnam.m4  x_ac_gpl_licensed.m4  x_ac_humor.m4  x_ac_ltlibobjs.m4  x_ac_meta.m4  x_ac_path_openssl.m4  x_ac_reentrant.m4  x_ac_select_auth_method.m4  x_ac_select_crypto_lib.m4
doc/: credential-v1-format.txt  credential_v1_format.txt  credential_v2_format.txt  credential_v3_format.txt
extra/: munge.spec-centos.6  munge.spec-systemd-fedora  munge.spec-systemd-opensuse
m4/: x_ac_aix.m4  x_ac_arch.m4  x_ac_canonical.m4  x_ac_check_cond_lib.m4  x_ac_check_fifo_recvfd.m4  x_ac_check_local_peercred.m4  x_ac_check_openssl.m4  x_ac_check_pthreads.m4  x_ac_check_so_peercred.m4  x_ac_darwin.m4  x_ac_debug.m4  x_ac_expand_install_dirs.m4  x_ac_getgrent.m4  x_ac_getgrnam.m4  x_ac_getpwnam.m4  x_ac_humor.m4  x_ac_path_openssl.m4  x_ac_select_auth_method.m4  x_ac_select_crypto_lib.m4  x_ac_with_libgcrypt.m4  x_ac_with_logrotateddir.m4  x_ac_with_munge_socket.m4  x_ac_with_openssl.m4  x_ac_with_pkgconfigdir.m4  x_ac_with_runstatedir.m4  x_ac_with_sysconfigdir.m4  x_ac_with_systemdsysusersdir.m4  x_ac_with_systemdunitdir.m4  x_ac_with_sysvinitddir.m4
portable/: README  inet_ntop.c  inet_ntop.h  strlcat.h  strlcpy.h
src/: Makefile.am  Makefile.in
src/common/: Makefile.am  crypto.c  crypto.h  entropy.c  entropy.h  hkdf.c  hkdf.h  hkdf_api_test.c  hkdf_rfc_test.c  hkdf_test.c  mac.c  mac.h  mac_test.c  md.c  md.h  path.c  path.h  path_canonicalize_test.c  query.c  query.h  rotate.c  rotate.h  test.c  test.h  xgetgr.c  xgetgr.h  xgetpw.c  xgetpw.h  xsignal.c  xsignal.h
src/etc/: Makefile.am  Makefile.in  munge-tmpfiles.conf  munge.init  munge.init.in  munge.logrotate.conf.in  munge.pc.in  munge.pkgconfig.pc.in  munge.service  munge.service.in  munge.sysconfig  munge.systemd.service.in  munge.systemd.sysconfig.in  munge.systemd.sysusers.conf.in  munge.sysvinit.init.in  munge.sysvinit.sysconfig.in  munge.tmpfiles.conf.in
src/libcommon/: Makefile.am  Makefile.in  auth_policy.h  common.h  daemonpipe.c  daemonpipe.h  dprintf.c  dprintf.h  fd.c  fd.h  license.c  license.h  log.c  log.h  m_msg.c  m_msg.h  msg.c  msg.h  munge.7.in  munge_defs.h  munge_msg.c  munge_msg.h  posignal.c  posignal.h  query.c  query.h  str.c  str.h  version.c  version.h
src/libmissing/: Makefile.am  Makefile.in  URL  inet_ntop.c  inet_ntop.h  missing.h  strlcat.c  strlcat.h  strlcpy.c  strlcpy.h
src/libmunge/: Makefile.am  Makefile.in  auth_send.c  auth_send.h  code.c  ctx.c  ctx.h  decode.c  encode.c  enum.c  m_msg_client.c  m_msg_client.h  msg_client.c  msg_client.h  munge.3.in  munge.c  munge.h  munge_ctx.3.in  munge_enum.3.in  strerror.c  strings.c
src/libtap/: Makefile.am  URL
src/munge/: Makefile.am  Makefile.in  munge.1.in  munge.c  read.c  read.h  remunge.1.in  remunge.c  unmunge.1.in  unmunge.c
src/munged/: Makefile.am  Makefile.in  auth.c  auth.h  auth_recv.c  auth_recv.h  base64.c  base64.h  base64_test.c  cipher.c  cipher.h  clock.c  clock.h  conf.c  conf.h  cred.c  cred.h  crypto.c  crypto.h  crypto_log.c  crypto_log.h  crypto_thread.c  crypto_thread.h  dec.c  dec.h  dec_v1.c  dec_v1.h  enc.c  enc.h  enc_v1.c  enc_v1.h  gids.c  gids.h  hash.c  hash.h  job.c  job.h  lock.c  lock.h  lookup.c  (+31 more)
src/mungekey/: Makefile.am  conf.c  conf.h  key.c  key.h  mungekey.8.in  mungekey.c
t/: 0000-sharness.t  0001-env-vars.t  0002-smiple.t  0010-basic.t  0011-munged-cmdline.t  0012-munge-cmdline.t  0013-unmunge-cmdline.t  0015-mungekey-cmdline.t  0021-munged-valgrind.t  0022-munge-valgrind.t  0023-unmunge-valgrind.t  0025-mungekey-valgrind.t  0099-credential-decode.cred  0099-credential-decode.t  0100-munged-lock.t  0101-munged-security-socket.t  0102-munged-security-keyfile.t  0103-munged-security-logfile.t  0104-munged-security-pidfile.t  0105-munged-security-seedfile.t  0110-munged-origin-addr.t  1000-chaos-rpm.t  Makefile.am  Makefile.in  sharness.sh  valgrind.supp
t/sharness.d/: 01-directories.sh  02-executables.sh  03-munged.sh  05-retry.sh  10-debug.sh  10-getifaddrs.sh  10-root.sh  10-sudo.sh  10-valgrind.sh
test/: 0001-env-vars.t  0010-basic.t  0011-munged-cmdline.t  0012-munge-cmdline.t  0013-unmunge-cmdline.t  0015-mungekey-cmdline.t  0021-munged-valgrind.t  0022-munge-valgrind.t  1000-chaos-rpm.t  (+11 more)
tests/: 0001-env-vars.t  0002-smiple.t  0010-basic.t  0011-munged-cmdline.t  0012-munge-cmdline.t  0013-unmunge-cmdline.t  0015-mungekey-cmdline.t  0021-munged-valgrind.t  0022-munge-valgrind.t  0023-unmunge-valgrind.t  0025-mungekey-valgrind.t  0095-credential-payload.t  0096-credential-expired.t  0097-credential-rewound.t  0098-credential-replayed.t  0099-credential-decode.out  0099-credential-decode.t  0100-munged-lock.t  0101-munged-security-socket.t  0102-munged-security-keyfile.t  0103-munged-security-logfile.t  0104-munged-security-pidfile.t  0105-munged-security-seedfile.t  0110-munged-origin-addr.t  0111-munged-mlockall.t  1000-chaos-rpm.t  Makefile.am  ctx_opt_ignore.c  sharness.sh  valgrind.supp
tests/sharness.d/: 00-bail_out.sh  01-directories.sh  02-executables.sh  03-munged.sh  05-retry.sh  05-wait_for.sh  10-debug.sh  10-faketime.sh  10-sudo.sh  10-valgrind.sh
(+8 files in other folders)
