##*****************************************************************************
## $Id$
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

include $(top_srcdir)/config/Make-inc.mk

ACLOCAL_AMFLAGS =		-I config
CONFIG_STATUS_DEPENDENCIES =	META
DISTCLEANFILES =		$(META_NAME)-*
EXTRA_DIST =			AUTHORS BUGS ChangeLog COPYING DISCLAIMER \
				HISTORY INSTALL JARGON NEWS PLATFORMS README \
				TODO munge.spec
SUBDIRS =			src
