# MUNGE top-level Makefile.am
#
# This file is part of the MUNGE Uid 'N' Gid Emporium (MUNGE).
# For details, see <https://dun.github.io/munge/>.

include $(top_srcdir)/Make-inc.mk

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	src \
	t \
	# End of SUBDIRS

EXTRA_DIST = \
	.gitignore \
	AUTHORS \
	COPYING \
	COPYING.LESSER \
	DISCLAIMER.LLNS \
	DISCLAIMER.UC \
	HISTORY \
	INSTALL \
	JARGON \
	KEYS \
	NEWS \
	PLATFORMS \
	QUICKSTART \
	README \
	README.AIX \
	README.MULTILIB \
	THANKS \
	bootstrap \
	doc \
	extra \
	munge.spec \
	# End of EXTRA_DIST

DISTCLEANFILES = \
	config/*~ \
	$(PACKAGE)-*.tar* \
	# End of DISTCLEANFILES

MAINTAINERCLEANFILES = \
	Makefile.in \
	aclocal.m4 \
	build-aux/compile \
	build-aux/config.guess \
	build-aux/config.sub \
	build-aux/depcomp \
	build-aux/install-sh \
	build-aux/ltmain.sh \
	build-aux/missing \
	build-aux/tap-driver.sh \
	build-aux/test-driver \
	config.h.in \
	configure \
	m4/libtool.m4 \
	m4/ltoptions.m4 \
	m4/ltsugar.m4 \
	m4/ltversion.m4 \
	m4/lt~obsolete.m4 \
	src/Makefile.in \
	src/etc/Makefile.in \
	src/libcommon/Makefile.in \
	src/libmissing/Makefile.in \
	src/libmunge/Makefile.in \
	src/munge/Makefile.in \
	src/munged/Makefile.in \
	t/Makefile.in \
	# End of MAINTAINERCLEANFILES
