##*****************************************************************************
## $Id: Makefile.am,v 1.4 2003/02/13 17:59:16 dun Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

include $(top_srcdir)/config/Make-inc.mk

SUBDIRS = \
	libcommon \
	libmissing \
	libmunge \
	munge \
	munged
