##*****************************************************************************
## $Id$
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

include $(top_srcdir)/config/Make-inc.mk

SUBDIRS = \
	etc \
	libcommon \
	libmissing \
	libmunge \
	munge \
	munged
