# MUNGE src/Makefile.am
#
# This file is part of the MUNGE Uid 'N' Gid Emporium (MUNGE).
# For details, see <https://dun.github.io/munge/>.

include $(top_srcdir)/Make-inc.mk

SUBDIRS = \
	common \
	etc \
	libcommon \
	libmissing \
	libmunge \
	libtap \
	munge \
	munged \
	mungekey \
	# End of SUBDIRS
